reports/g33/post_compileall.txt
Listing 'services/conport'...
Listing 'services/conport/.git'...
Listing 'services/conport/.git/hooks'...
Listing 'services/conport/.git/info'...
Listing 'services/conport/.git/logs'...
Listing 'services/conport/.git/logs/refs'...
Listing 'services/conport/.git/logs/refs/heads'...
Listing 'services/conport/.git/logs/refs/remotes'...
Listing 'services/conport/.git/logs/refs/remotes/origin'...
Listing 'services/conport/.git/objects'...
Listing 'services/conport/.git/objects/info'...
Listing 'services/conport/.git/objects/pack'...
Listing 'services/conport/.git/refs'...
Listing 'services/conport/.git/refs/heads'...
Listing 'services/conport/.git/refs/remotes'...
Listing 'services/conport/.git/refs/remotes/origin'...
Listing 'services/conport/.git/refs/tags'...
Listing 'services/conport/.github'...
Listing 'services/conport/.github/workflows'...
Compiling 'services/conport/app.py'...
Listing 'services/conport/assets'...
Listing 'services/conport/assets/images'...
Listing 'services/conport/conport-custom-instructions'...
Listing 'services/conport/src'...
Listing 'services/conport/src/conport'...
Listing 'services/conport/src/conport/core'...
Listing 'services/conport/src/conport/db'...
Listing 'services/conport/src/conport/handlers'...
Listing 'services/conport/src/conport/v2'...
Listing 'services/conport/src/context_portal_mcp.egg-info'...
Listing 'services/conport/tests'...
Listing 'services/dopecon-bridge'...
Listing 'services/dopecon-bridge/integrations'...
Compiling 'services/dopecon-bridge/main.py'...
Compiling 'services/dopecon-bridge/orchestrator_endpoints.py'...
***   File "services/dopecon-bridge/orchestrator_endpoints.py", line 414
    async def get_active_slogger.info():
                                ^
SyntaxError: expected '('

Listing 'services/dopecon-bridge/patterns'...
Listing 'services/dopecon-bridge/tests'...
Listing 'services/dopecon-bridge/tests/integration'...
Listing 'services/dopecon-bridge/tests/performance'...
Listing 'services/task-orchestrator'...
Listing 'services/task-orchestrator/adapters'...
Listing 'services/task-orchestrator/docs'...
Listing 'services/task-orchestrator/dopemux-vscode'...
Listing 'services/task-orchestrator/dopemux-vscode/src'...
Compiling 'services/task-orchestrator/enhanced_orchestrator.py'...
***   File "services/task-orchestrator/enhanced_orchestrator.py", line 1167
    async def _auto_setup_slogger.info(self, sprint_data: Dict[str, Any]) -> None:
                                 ^
SyntaxError: expected '('

Listing 'services/task-orchestrator/intelligence'...
Listing 'services/task-orchestrator/intelligence/services'...
Listing 'services/task-orchestrator/intelligence/services/task-orchestrator'...
Listing 'services/task-orchestrator/intelligence/services/task-orchestrator/ml'...
Listing 'services/task-orchestrator/ml'...
Listing 'services/task-orchestrator/observability'...
Compiling 'services/task-orchestrator/query_server.py'...
***   File "services/task-orchestrator/query_server.py", line 153
    async def get_active_slogger.info():
                                ^
SyntaxError: expected '('

Compiling 'services/task-orchestrator/server.py'...
Listing 'services/task-orchestrator/tests'...
Compiling 'services/task-orchestrator/zen_client.py'...
***   File "services/task-orchestrator/zen_client.py", line 23
    import logging
    ^^^^^^
SyntaxError: invalid syntax

